--- a/src/styles/admin/home.scss
+++ b/src/styles/admin/home.scss
@@ -6,7 +6,9 @@
     display: flex;
 
     .sidebar {
+        // position: fixed;
         width: 200px;
+        // width: 50px;
         background-color: #fff;
         border-right: 1px solid #d1d3d6;
         // border-right: 1px solid red;
